fixes #122. bbox was too small. also fixed style of small markers so they are red for icatmar

--- a/globalStyle.css
+++ b/globalStyle.css
@@ -302,6 +302,10 @@ button:hover {
   border: solid 1px black;
 }
 
+.map-marker-icatmar {
+  background: var(--red);
+}
+
 
 
 /* WIDGET */
